# mousee

./: .gitignore  Cargo.toml  LICENSE  README.md  SPEC.md  build.rs
client/: index.html
src/: config.rs  instance.rs  main.rs  monitors.rs  mouse.rs  net.rs  processor.rs  protocol.rs  server.rs  tls.rs  tray.rs  tui.rs
